--- a/src/p2-homeworks/h4/common/c1-SuperInputText/SuperInputText.module.css
+++ b/src/p2-homeworks/h4/common/c1-SuperInputText/SuperInputText.module.css
@@ -16,6 +16,11 @@
     -webkit-appearance: none;
 }
 
+.superInputError {
+    composes: superInput;
+    border: 1px solid red;
+}
+
 .superInput:focus {
      box-shadow:  inset 1px 1px 2px #BABECC, inset -1px -1px 2px #FFF;
  }
